--- a/index.html
+++ b/index.html
@@ -96,12 +96,6 @@
                         <ul>
                             <li><a href="capitulo-18/index.html" target="_blank" rel="noopener noreferrer" class="chapter-link">Capítulo 18...</a></li>
                         </ul>
-                        <ul>
-                            <li><a href="epilogo/index.html" target="_blank" rel="noopener noreferrer" class="chapter-link">Epílogo...</a></li>
-                        </ul>
-                        <ul>
-                            <li><a href="capitulo-especial/index.html" target="_blank" rel="noopener noreferrer" class="chapter-link">Capítulo Especial Azuma...</a></li>
-                        </ul>
                     </section>
                 </article>
             </div>
@@ -111,6 +105,6 @@
         <div class="component-loading-placeholder">Cargando pie de página...</div>
     </div>
 
-    <script src="/OREAK-V9*0 /js/hub-global.js" defer></script> 
+    <script src="/OREAK-V9/js/hub-global.js" defer></script> 
 </body>
 </html>
