--- a/capitulo-15/index.html
+++ b/capitulo-15/index.html
@@ -86,6 +86,11 @@
                     <p class="novela-description">Tiene la espalda encorvada y un aura oscura, y en la espalda llevaba un arma que parecía una lanza plegada.</p>
                     <p class="novela-description">— ...Sí, Lady Rosetta.</p>
                     <p class="novela-description">La capitán de la guardia respondió con una voz pequeña y frágil... su nombre era Vivian Sera Sanders.</p>
+
+                    <div class="imagen-capitulo">
+                        <img src="../images/oreaku-volumen-9-capitulo-15-color.png" alt="Escena importante del capítulo 15 a color">
+                    </div>  
+
                     <p class="novela-center">◇ ◆ ◇ ◆ ◇</p>
                     <p class="novela-description">...Esto está mal.</p>
                     <p class="novela-description">Al ver la flota de 20.000 naves que había aparecido ante mí, sentí el impulso de quejarme groseramente al guía, quien sin duda estaba ocupado brindándome apoyo.</p>
