--- a/capitulo-7/index.html
+++ b/capitulo-7/index.html
@@ -131,6 +131,11 @@
                     <p class="novela-description">Lo tocó con ambas manos, pero la hinchazón era pequeña.</p>
                     <p class="novela-description">Cuando compara sus pechos con los impresionantes de Fuuka, se sintió deprimida.</p>
                     <p class="novela-description">Mis pechos son pequeños.</p>
+
+                    <div class="imagen-capitulo">
+                        <img src="../images/oreaku-volumen-9-capitulo-7-color.png" alt="Escena importante del capítulo 7 a color">
+                    </div>  
+
                     <p class="novela-description">Liam, por otro lado, estaba tan tranquilo como siempre, aunque parecía estupefacto ante Fuuka.</p>
                     <p class="novela-description">— Nunca te había mirado así. Cerrar los ojos es un gesto de cortesía. Incluso entre amigos, la cortesía es importante, ¿no?</p>
                     <p class="novela-description">Riho y Fuuka inclinaron la cabeza.</p>
