--- a/capitulo-18/index.html
+++ b/capitulo-18/index.html
@@ -366,7 +366,7 @@
                     <nav class="chapter-navigation" aria-label="Navegación de capítulos">
                         <a href="../capitulo-17/index.html" class="btn btn-secondary" aria-disabled="true">Capítulo Anterior</a> 
                         <a href="../index.html" class="btn btn-primary">Índice de Capítulos</a>
-                        <a href="#" class="btn btn-secondary">Siguiente Parte</a>
+                        <a href="https://rtber.github.io/OREAK-V10/prologo/index.html" class="btn btn-secondary">Siguiente Parte</a>
                     </nav>
             </div>
         </section>
